# agricultural_automotion_robot

./: .gitignore  README.md
bumperbot_ws/src/RFID_antenna_plugin/: CMakeLists.txt  package.xml
bumperbot_ws/src/RFID_antenna_plugin/src/: antenna copy.cpp  antenna.cpp
bumperbot_ws/src/RFID_tag_plugin/: CMakeLists.txt  package.xml
bumperbot_ws/src/RFID_tag_plugin/map_layouts/: map.txt
bumperbot_ws/src/RFID_tag_plugin/src/: tags.cpp
bumperbot_ws/src/bumperbot_controller/: package.xml
bumperbot_ws/src/bumperbot_description/: package.xml
bumperbot_ws/src/bumperbot_description/launch/: gazebo.launch
bumperbot_ws/src/bumperbot_description/models/antenna_1/: model.sdf
bumperbot_ws/src/bumperbot_description/models/antenna_1/meshes/: antenna_visual.stl
bumperbot_ws/src/bumperbot_description/models/normal_size_fixture/: model.sdf
bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo copy.xacro  bumperbot_gazebo.xacro
bumperbot_ws/src/bumperbot_examples/: package.xml
bumperbot_ws/src/bumperbot_localization/: package.xml
bumperbot_ws/src/gazebo_to_ros_tf/launch/: gazebo_to_ros_tf.launch  world_to_ros.py
bumperbot_ws/src/gazebo_to_ros_tf/src/: world_to_ros.py:Zone.Identifier
bumperbot_ws/src/robot_control/: package.xml
