<package format="2">
  <name>bumperbot_description</name>
  <version>0.0.0</version>
  <description>
    <p>URDF Description package for bumperbot_description</p>
    <p>This package contains configuration data, 3D models and launch files
for bumperbot_description robot</p>
  </description>
  <author email="roberto.lima@aluno.cefet-rj.br">Roberto Gomes de Lima</author>
  <license>Apache License, Version 2.0</license>
  <maintainer email="roberto.lima@aluno.cefet-rj.br">Roberto Gomes de Lima</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

</package>